# 404pr1-historical

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CSV.h  Classroom.h  Course.h  Main.h  Solution.h  Student.h  TImeslot.h  Timer.h  Timeslot.h  Typedefs.h  main.h
res/: blocked.csv  classroom.csv  classroom2.csv  course-list1.csv  course-list2.csv  course-list3.csv  course-list4.csv  course-list5.csv  course-list6.csv  course-list7.csv  sampletext.txt  t1.csv  test.csv
src/: CSV.cpp  Classroom.cpp  Course.cpp  Main.cpp  Solution.cpp  Student.cpp  TImeslot.cpp  Timer.cpp  Timeslot.cpp  main.cpp
